--- a/gb/20/9/8/n12388095.md
+++ b/gb/20/9/8/n12388095.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gjwjdd3075/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gjwjdd3075/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gjwjdd3075/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gjwjdd3075/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gjwjdd3075/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>蔡英文吁理念相同国家合作 捍卫共同价值观</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/2009080116332378-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2020年09月08日讯】（大纪元记者钟元台北报导）中华民国总统<ahref="https://github.com/gjwjdd3075/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>今天（9月8日）出席“凯达格兰论坛－2020亚太安全对话”开幕典礼，强调安全与经济发展密不可分，并举台美欧日的合作<ahref="https://github.com/gjwjdd3075/djy/blob/master/gb/tag/%E9%87%8D%E7%BB%84%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">重组供应链</a>及台美协助发展5G说明，呼吁理念相近联盟合作，共同为最珍视的价值观“自由、安全、人权和民主”持续奋斗。</p>
-<h2><ahref="https://github.com/gjwjdd3075/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>：民主国家为打造自由、开放、繁荣区域的凝聚力 将持续驱动未来发展</h2>
+	<p>【大纪元2020年09月08日讯】（大纪元记者钟元台北报导）中华民国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>今天（9月8日）出席“凯达格兰论坛－2020亚太安全对话”开幕典礼，强调安全与经济发展密不可分，并举台美欧日的合作<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%8D%E7%BB%84%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">重组供应链</a>及台美协助发展5G说明，呼吁理念相近联盟合作，共同为最珍视的价值观“自由、安全、人权和民主”持续奋斗。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>：民主国家为打造自由、开放、繁荣区域的凝聚力 将持续驱动未来发展</h2>
 <p>蔡英文致词表示，她要热烈欢迎来自世界各地的与会佳宾。今天透过现代科技，跨越时差，齐聚讨论大家都深受影响的关键议题。她希望COVID-19（中共病毒）疫情减缓后，各位能有机会造访台湾，亲自体验活力充沛的民主台湾。拜科技之赐促成了今天的盛会，但科技的功用也有限。人们不会忘记2020这一年为21世纪带来最大的挑战。</p>
 <p>“截至本周，全球有逾2,700万确诊病例，约89万人丧生。”她说，世界各国现在正在因应第2波与第3波的感染，医疗专家们夜以继日努力研发疫苗。这项挑战是艰钜的，但没有人屈服，台湾更是勇敢面对。</p>
 <p>“台湾努力抗疫，就是个动人的故事。”蔡英文表示，1月起，政府就以积极、果断及透明的方式对抗病毒。台湾成功的故事人人称颂，她不需要在这里赘述，“但我们学到最重要的一课是，台湾在疫情之下能成为世界上最安全的地方，同时，又不失对民主自由的坚持”。尽管疫情冲击，台湾的民主治理仍成效卓&#33879;，这是因为每个国民、企业、公民团体和政府的共同努力。</p>
@@ -22,7 +22,7 @@
 <h2>蔡英文：理念相近国家应经济整合合作重整供应链，不受政治要胁</h2>
 <p>“这场疫情带给我们的启示就是，透明和良治终将胜出，也最符合人民的利益。”她说，疫情期间台湾面对的挑战已超越公共卫生和安全议题，国民经济和国际贸易亦受重击。</p>
 <p>她说，台湾学到最重要也是最惨痛的教训就是：“我们深深依赖的全球供应链和贸易机制，在面对侵略者的强制手段时是如此之脆弱。”然而，当前的情势也让台湾有机会重新检视、布局经贸合作，顺应重整供应链，并强化公平和非强制性贸易规则。</p>
-<p>上周捷克参议院议长历史性访台期间，“美国在台协会”主办“<ahref="https://github.com/gjwjdd3075/djy/blob/master/gb/tag/%E9%87%8D%E7%BB%84%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">重组供应链</a>：促进理念相近伙伴间之韧性论坛”，欧盟、日本、捷克及台湾都派代表与会。她说，会中讨论了重整全球供应链，布建于国内或理念相近经济体中的必要性。最重要的是，必须确保供应链安全无虞，不受政治要胁。</p>
+<p>上周捷克参议院议长历史性访台期间，“美国在台协会”主办“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%8D%E7%BB%84%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">重组供应链</a>：促进理念相近伙伴间之韧性论坛”，欧盟、日本、捷克及台湾都派代表与会。她说，会中讨论了重整全球供应链，布建于国内或理念相近经济体中的必要性。最重要的是，必须确保供应链安全无虞，不受政治要胁。</p>
 <p>蔡英文表示，台美也发布5G安全的联合声明，同意双方都有责任评估5G软硬体供应商与供应链，以建立安全的5G架构。台美也将协助提高大家对5G网路风险的警觉，与理念相近的伙伴合作发展妥适的5G标准、准则与最佳做法。这象征共享价值伙伴共谱合作的新篇章，以及印太和全球以规则为基础的新局。“此一联盟将捍卫我们最珍视的自由、安全、人权和民主价值”。</p>
 <p>最后，她要再次强调，“我们一次次遭逢巨大挑战，但凭借对价值的信念及大家齐心协力，终能安度风暴。唯有如此，我们才能打造一个和平、繁荣、安全的印太区域”。安全与经济发展密不可分，“理念相近国家间倘缺乏经济整合，将迫使我们只能向价值和理念不同者谋求一时的妥协。合则胜，分则败”。</p>
 <p>她说，疫情终将过去，她相信“我们为打造一个自由、开放、繁荣区域所集结的凝聚力，将持续驱动未来的发展”。</p>
@@ -33,42 +33,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/1/16/n11798096.md#1">瑞辛纳对话：民主国家合作 护印太秩序</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/5/18/n12119160.md#1">加智库研究员：认清中共 才是民主国家正途</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/5/29/n12146451.md#1">不倚赖中国5G 英推动10个民主国家结盟</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/6/30/n12221905.md#1">无国界记者：民主国家一起阻北京扼杀香港自由</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/16/n11798096.md#1">瑞辛纳对话：民主国家合作 护印太秩序</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/18/n12119160.md#1">加智库研究员：认清中共 才是民主国家正途</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/29/n12146451.md#1">不倚赖中国5G 英推动10个民主国家结盟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/30/n12221905.md#1">无国界记者：民主国家一起阻北京扼杀香港自由</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10029772.md#1" target="_blank">林辉：中共翻云覆雨 齐白石去世后被打倒</a></li><li><a href="https://github.com/gjwjdd3075/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232919.md#1" target="_blank">加拿大温莎市宣布 五月为该市法轮大法月</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/4/n11163148.md#1" target="_blank">医生见证人病人重生的神奇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/8/26/n12359365.md#1">不以存亡易心的古代奇女子</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/7/n12387230.md#1">【新闻看点】中共外交频出洋相 习扩大开放被讽</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/8/n12388058.md#1">【西岸观察】挺川普 全美游艇游行创纪录</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/5/n12383239.md#1">【新闻看点】中共触底线白宫震惊 习危险来了</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12383819.md#1">500亿加密货币出逃 专家归因中共沉船效应</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12384093.md#1">腾讯微博本月底将停止服务和运营</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/5/n12383230.md#1">台影迷抵制刘亦菲《花木兰》 港网友感动致谢</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12383538.md#1">曾入围金曲歌王 严咏能台上昏倒不治 享年50岁</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12384834.md#1">袁咏仪晒全家福庆生 包包造型蛋糕最别致</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12383875.md#1">加拿大10岁男童遭美洲狮攻击 小狗奋勇救人</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/6/n12383992.md#1">美国空姐分享入住旅馆诀窍 网上爆红</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/5/n12382815.md#1">百年来仅三次 25米长罕见蓝鲸现悉尼海岸</a></li>
-<li><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/4/n12380960.md#1">这些食物燃脂、促代谢！自制3饮料边喝边瘦</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gjwjdd3075/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gjwjdd3075/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/8/n12388095.htm">蔡英文吁理念相同国家合作 捍卫共同价值观</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/8/n12388095.htm">蔡英文吁理念相同国家合作 捍卫共同价值观</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/gjwjdd3075/djy/blob/master/gb/20/9/8/n12388095.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gjwjdd3075/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gjwjdd3075/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gjwjdd3075/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gjwjdd3075/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/8/n12388095.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
